fixing icons on mobile design

--- a/style.css
+++ b/style.css
@@ -99,8 +99,6 @@ body {
     }
     .fa-facebook-f  {
         color: #eeeff2;
-    }
-    #FB {
         height: 25px;
         width: 25px;
         border: 1px solid #eeeff2;
@@ -113,8 +111,6 @@ body {
     }
     .fa-twitter{
         color: #eeeff2;
-    }
-    #twitter {
         height: 25px;
         width: 25px;
         border: 1px solid #eeeff2;
@@ -127,8 +123,6 @@ body {
     }
     .fa-instagram   {
         color: #eeeff2;
-    }
-    #insta {
         height: 25px;
         width: 25px;
         border: 1px solid #eeeff2;
